test/classes/initializers/records/generics/varArgDefaultValue.good
varArgDefaultValue.chpl:12: error: initializer produces a different type
varArgDefaultValue.chpl:12: note: when default-initializing 'foo1' of type 'Foo(bool)'
varArgDefaultValue.chpl:12: note: init resulted in type 'Foo(int(64))'
